[project]
name = "eng-dados-apache-spark"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus",email = "matheusdasilvagastaldi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9.9"
dependencies = [
    "pyspark (==3.4.2)",
    "delta-spark (==2.4.0)",
    "jupyterlab (>=4.4.0,<5.0.0)",
    "mkdocs-material (>=9.6.12,<10.0.0)",
    "mkdocstrings (>=0.29.1,<0.30.0)",
    "pymdown-extensions (>=10.14.3,<11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
